Added back info.js - forgot this was needed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,17 @@
-# Intellij
-.idea/
-*.iml
-*.iws
-
-# Mac
-.DS_Store
-
-# Maven
-log/
-target/
-
 # NPM
 node_modules/
 package-lock.json
 
 # Files create by Create-assets
 models/
-lambda/custom/info
+
 
 # Do not preserve private config file
 config.js
+.ask/config
+lambda/custom/info/album.js
+lambda/custom/info/artist.js
+lambda/custom/info/genre.js
+lambda/custom/info/playlist.js
+lambda/custom/info/title.js
+
